--- a/web/app/themes/scratch/style.css
+++ b/web/app/themes/scratch/style.css
@@ -581,8 +581,8 @@ margin-bottom:0;
 border-radius:1px 1px 1px 1px;
 border:solid rgba(0,0,0,1);
 border-width: 0 0 0 0;
-box-shadow:none;background-color:#0000B3;
-background:rgba(0,0,179,1);
+box-shadow:none;background-color:#0033A1;
+background:#0033A1;
 background-clip:padding-box;box-sizing:border-box;
 }
 @media screen and (min-width:992px) 
@@ -1544,8 +1544,8 @@ padding-top:0 !important;
 }
  .navbar-default
 {
-background-color:#0000B3;
-background:rgba(0,0,179,1);
+background-color:#0033A1;
+background:#0033A1;
 background-clip:padding-box;border-radius:0 0 0 0;
 border:solid rgba(231,231,231,1);
 border-width: 0 0 0 0;
@@ -2725,8 +2725,8 @@ overflow: hidden;
 }
  #ttr_footer_inner 
 {
-background-color:#0000B3;
-background:rgba(0,0,179,1);
+background-color:#0033A1;
+background:#0033A1;
 background-clip:padding-box;border-radius:0 0 0 0;
 border:solid rgba(220,220,220,1);
 border-width: 1px 0 0 0;
