--- a/web/app/themes/theme-bones-master/style.css
+++ b/web/app/themes/theme-bones-master/style.css
@@ -1,5 +1,5 @@
 /******************************************************************
-Theme Name: Bones (Rename Me!)
+Theme Name: Olivetti Theme
 Theme URI: http://www.themble.com/bones
 Description: This site was built using the Bones Development Theme. For more information about Bones or to view documentation, you can visit the <a href="https://github.com/eddiemachado/bones/issues" title="Bones Issues">Bones Issues</a> page on Github. You'll want to customize this for your clients with your own information.
 Author: Your Name Here
@@ -103,6 +103,9 @@ So we're gonna drop these here to keep it happy.
 Great work, Theme Check (eye roll)
 */
 
-.sticky {}          /* DO NOT EDIT THIS */
-.gallery-caption {} /* THESE ARE USELESS */
-.bypostauthor {}    /* THEY ARE ONLY TO KEEP THEME CHECK HAPPY */
+.sticky {
+} /* DO NOT EDIT THIS */
+.gallery-caption {
+} /* THESE ARE USELESS */
+.bypostauthor {
+} /* THEY ARE ONLY TO KEEP THEME CHECK HAPPY */
